src/test/pass/enum_class_basic.ly
enum class Option[A] {
	Some(A),
	None
}
